--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1" />
+		<link rel="icon" href="/favicon.ico?v=1" sizes="any" />
+		<link rel="icon" type="image/png" href="/favicon-96x96.png?v=1" sizes="96x96" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png?v=1" />
+		<link rel="manifest" href="/site.webmanifest?v=1" />
+		<link rel="mask-icon" href="/favicon.svg?v=1" color="#2d0a79" />
+		<meta name="theme-color" content="#2d0a79" />
+		<meta name="application-name" content="Petalytics" />
+		<meta name="apple-mobile-web-app-title" content="Petalytics" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
